Redesigned mobile site, fixed nav on mobile blog

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,7 +45,6 @@
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
-        background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
@@ -62,9 +61,9 @@
             > svg {
                 width: 18px;
                 height: 15px;
-
+                background-color: $card-color;
                 path {
-                    fill: $grey-color-dark;
+                    fill: $text-color;
                 }
             }
         }
