--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,11 +11,19 @@
 
 }
 
+.welcome {
+	margin-top: 120px;
+	margin-bottom: 30px;
+	color:white; 
+	padding-bottom: 0px;
+}
+
 .blurb{
 
 	text-align: center;
 	color: white;
-	margin-right: 0;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .box{
 	border-style:solid;
@@ -186,19 +194,64 @@ section div h1 {
   
 ::-webkit-scrollbar-track{ /* TRACK */
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0,0.3);
-	/*-webkit-border-radius: 10px;
-	border-radius: 10px;*/
 }
 
 ::-webkit-scrollbar-thumb{ /* Cursor */
-	/*-webkit-border-radius: 10px;
-	border-radius: 10px;*/
 	background: rgba(255,255,255,1);
-	/*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5)*/;
-}
-
-::-webkit-scrollbar-thumb:window-inactive{
-	/*background: rgba(255,255,255,0.4);*/
 }
 
 
+/** MOBILE VERSION (Sadly not mobile-first :[ )**/
+@media screen and (max-width:  767px){
+
+	/** GENERAL **/
+
+	.card {
+		overflow-y: none;
+	}
+
+	/** HOME **/
+
+	#myPicture{
+		width: 90%;
+		height: 90%;
+		margin: 20px 15px 0px 20px;
+		border: 1px solid black;
+	}
+
+	.welcome{
+		margin-top: 10px;
+		margin-bottom: 10px;
+		font-size: 2em;
+	}
+
+	.blurb {
+		font-size: 0.65em;
+		margin-left: 20px;
+		margin-right: 20px;
+	}
+
+	/** SKILLS **/
+	ul {
+		padding-left: 20px;
+	}
+
+	ul li {
+		font-size: 0.65em;
+	}
+
+	.list-headers {
+		font-size: 2em;
+	}
+
+	.sk-desk {
+		display: none;
+	}
+
+	/** PROJECTS **/
+
+	td{
+		font-size: 0.65em;
+	}
+
+}
